observer-operator/assets/manifests/route-vsystem.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: vsystem
  namespace: sdi
spec:
  host: vsystem-sdi.apps.morrisville.ocp.vslen
  port:
    targetPort: vsystem
  tls:
    destinationCACertificate: |+
      -----BEGIN CERTIFICATE-----
      MIIDnDCCAoSgAwIBAgIRAN/67VpZcr5Ru2+6lk/64BwwDQYJKoZIhvcNAQELBQAw
[...]
      lsxksd/hD2UbESK/+lEg6g==
      -----END CERTIFICATE-----
      -----BEGIN CERTIFICATE-----
      MIIDwTCCAqmgAwIBAgIRAKLQmjGJ0nwS3gN7IN4y57swDQYJKoZIhvcNAQELBQAw
[...]
      K3YTd98=
      -----END CERTIFICATE-----

    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: vsystem
    weight: 100
  wildcardPolicy: None
